Fix safari flickering - debug

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -194,7 +194,7 @@ body {
 
 .user-details {
   text-align: center;
-  font-size: 12px;
+  font-size: 16px;
   margin: 10px auto;
 }
 
@@ -212,7 +212,7 @@ body {
     list-style-type: square;
     margin: 1em 0;
     padding-left: 40px;
-  }
+  } 
   li {
     color: $main;
     font-size: 1.1rem;
